project(qbfsort)
cmake_minimum_required(VERSION 3.18)
set(WITH_TESTS)
set(CMAKE_CXX_STANDARD 17)
set(SOURCE_FILES main.cpp QbfFormula.cpp LiteralSorter.cpp ClauseSorter.cpp QuantifierSorter.cpp)
add_executable(qbfsort ${SOURCE_FILES})

if(${WITH_TESTS})
  enable_testing()
  add_test(NAME basic COMMAND bash -c "./qbfsort < test/input/basic.cnf > test/basic.cnf; diff test/basic.cnf test/expected/basic.cnf")
  add_test(NAME literal_basic COMMAND bash -c "./qbfsort sortLiterals=basic < test/input/basic.cnf > test/literal_basic.cnf; diff test/literal_basic.cnf test/expected/literal_basic.cnf")
  add_test(NAME clause_basic COMMAND bash -c "./qbfsort sortClauses=basic < test/input/basic.cnf > test/clause_basic.cnf; diff test/clause_basic.cnf test/expected/clause_basic.cnf")
  add_test(NAME quantifier_basic COMMAND bash -c "./qbfsort sortQuantifiers=basic < test/input/basic.cnf > test/quantifier_basic.cnf; diff test/quantifier_basic.cnf test/expected/quantifier_basic.cnf")
  add_test(NAME frequency COMMAND bash -c "./qbfsort < test/input/frequency.cnf > test/frequency.cnf; diff test/frequency.cnf test/expected/frequency.cnf")
  add_test(NAME literal_frequency COMMAND bash -c "./qbfsort sortLiterals=frequency < test/input/frequency.cnf > test/literal_frequency.cnf; diff test/literal_frequency.cnf test/expected/literal_frequency.cnf")
  add_test(NAME clause_frequency COMMAND bash -c "./qbfsort sortClauses=frequency < test/input/frequency.cnf > test/clause_frequency.cnf; diff test/clause_frequency.cnf test/expected/clause_frequency.cnf")
  add_test(NAME quantifier_frequency COMMAND bash -c "./qbfsort sortQuantifiers=frequency < test/input/frequency.cnf > test/quantifier_frequency.cnf; diff test/quantifier_frequency.cnf test/expected/quantifier_frequency.cnf")
  file(COPY ../test DESTINATION ${CMAKE_BINARY_DIR})
endif()
